# dandisets-healthstatus

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  WEBDAV.md  healthstatus.py  noxfile.py  pynwb_open_load_ns.py  requirements.txt  run-update.sh  run.sh  run_loop.sh  setup.cfg  update.py
000003/: status.yaml
000004/: status.yaml
000005/: status.yaml
000006/: status.yaml
000007/: status.yaml
000008/: status.yaml
000009/: status.yaml
000010/: status.yaml
000011/: status.yaml
000012/: status.yaml
000013/: status.yaml
000015/: status.yaml
000016/: status.yaml
000017/: status.yaml
000018/: status.yaml
000019/: status.yaml
000020/: status.yaml
000021/: status.yaml
000022/: status.yaml
000023/: status.yaml
000024/: status.yaml
000025/: status.yaml
000026/: status.yaml
000027/: status.yaml
000028/: status.yaml
000029/: status.yaml
000030/: status.yaml
000031/: status.yaml
000032/: status.yaml
000033/: status.yaml
000034/: status.yaml
000035/: status.yaml
000036/: status.yaml
code/: LICENSE  checknwb.sh  healthstatus.py  setup.cfg  tox.ini
code/src/healthstatus/: __init__.py  __main__.py  adandi.py  aioutil.py  checker.py  config.py  core.py  mounts.py  reporter.py  tests.py  util.py  yamllineno.py
code/test/: test_report.py  test_yamllineno.py
code/test/data/: report-output.md
code/test/data/report-input/000001/: status.yaml
code/test/data/report-input/000002/: status.yaml
code/test/data/report-input/000003/: status.yaml
code/test/data/report-input/000004/: status.yaml
code/test/data/report-input/000005/: status.yaml
code/test/data/report-input/000006/: status.yaml
(+624 files in other folders)
