[metadata]
name = dandisets-healthstatus
version = 0.0.0
description = Run healthchecks on assets in Dandi Archive
long_description = file:README.rst
long_description_content_type = text/x-rst
author = DANDI Developers
author_email = team@dandiarchive.org
maintainer = John Thorvald Wodder II
maintainer_email = dandisets-healthstatus@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/dandi/dandisets-healthstatus

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >=3.8
install_requires =
    anyio ~= 4.0
    async_generator ~= 1.10; python_version < '3.10'
    click >= 8.0
    datalad
    datalad-fuse
    ghreq ~= 0.1
    hdmf
    packaging
    pydantic ~= 2.0
    pynwb
    pyyaml
    requests ~= 2.20

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dandisets-healthstatus = healthstatus.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = False
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy

[mypy-datalad.*]
ignore_missing_imports = True

[mypy-pynwb.*]
# <https://github.com/NeurodataWithoutBorders/pynwb/issues/1408>
ignore_missing_imports = True

[pydantic-mypy]
init_forbid_extra = True
warn_required_dynamic_aliases = True
